tests/snapshots/serde__display_data_view_second_view.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new DataView(new Uint8Array([1, 2]).buffer); [a, new DataView(a.buffer, 1, 1)]"
---
const v0 = new Uint8Array([
  0x01, 0x02,
]).buffer;
[
  new DataView(v0),
  new DataView(v0, 1),
]
