tests/snapshots/serde__display_dataview_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new DataView(new ArrayBuffer(2, { maxByteLength: 10 })); a.setUint8(0, 1); a"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Uint8Array(v0).set([
  0x01, 0x00,
]);
new DataView(v0)
