tests/snapshots/serde__display_int32array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Int32Array(new ArrayBuffer(8, { maxByteLength: 12 })); a.set([1, -2]); a"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 12 });
new Uint8Array(v0).set([
  0x01, 0x00, 0x00, 0x00, 0xfe, 0xff, 0xff, 0xff,
]);
new Int32Array(v0)
