tests/snapshots/serde__display_int8array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Int8Array(new ArrayBuffer(2, { maxByteLength: 10 })); a.set([1, -2]); a"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Uint8Array(v0).set([
  0x01, 0xfe,
]);
new Int8Array(v0)
